@@ -7,6 +7,8 @@ copyright_holder  = Randy Stauner
 copyright_year    = 2011
 
 [@Author::RWSTAUNER]
+; declare prereqs used by inc/ even though they're currently all core modules
+AutoPrereqs.configure_finder = :IncModules
 ; current default, but very important.  the lib/auto tree only exists to enable `prove -lv`
 GatherDir.follow_symlinks = 0
 
@@ -18,6 +20,7 @@ Term::ANSIColor = 1.03
 Term::ANSIColor = 3
 
 [RemovePrereqs]
+; one of the tests uses this
 remove = inc::VimCommand
 
 ; default GatherDir skips leading-dot dirs but we want to include this specific one
